welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value abs
  if (abs(a- 10) <= abs(b- 10)){
      ^close10:2: error: not found: value abs
  if (abs(a- 10) <= abs(b- 10)){
                    ^close10:3: error: not found: value abs
    if (abs(a- 10) == abs(b- 10)){
        ^close10:3: error: not found: value abs
    if (abs(a- 10) == abs(b- 10)){
                      ^