welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  if (abs(a- 10) <= abs(b- 10)){
    if (abs(a- 10) == abs(b- 10)){
      return 0;}
    return a;
  }
  return b
}